Avoid contact us wrap

--- a/app/javascript/app/components/contact/contact-styles.scss
+++ b/app/javascript/app/components/contact/contact-styles.scss
@@ -17,5 +17,5 @@
   text-transform: uppercase;
   color: $dark-gray;
   margin-right: 10px;
-  min-width: 90px;
+  min-width: 95px;
 }
